--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
   background-color: black;
-  background-image: url("images/background.gif");
-    color: white;
+  background-image: url("images/background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  color: white;
   font-family: sans-serif
 }
 
@@ -9,15 +12,24 @@ h1, p, h2, h3, h4 {
   text-align: center;
 }
 
+a {
+color: blue;
+}
+
 footer {
 text-align: center;
 
 }
 
-
-a {
-text-align: center;
-color: red
+div.content {
+margin:0 auto;
+padding:0 17px;
+border:3px dashed black;
+box-shadow:0 0 20px #000;
+max-width:1000px;
+font-size:19px;
+line-height:23px;
+background:#00ccff3A;
 }
 
 img.center {
@@ -32,6 +44,6 @@ margin:auto;
 }
 
 h1.title { 
-color: black;
-text-shadow: 0px 0px 10px red;
+color: white;
+text-shadow: 0px 0px 10px cyan;
 }
