--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  background-image: url("images/background.jpg");
+  background-image: url("./images/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
